# pyvinorm

./: .gitignore  README.md  pyproject.toml
devs/: benchmark.py  test_norm.py
src/pyvinorm/: cli.py  keyword_replacer.py  vinorm.py
src/pyvinorm/managers/: __init__.py  lm.py  mapping.py
src/pyvinorm/patterns/: base.py  handler.py
src/pyvinorm/patterns/patterns/: address.py  datetime.py  math.py  special.py
src/pyvinorm/resources/mapping/: Acronyms.txt  BaseUnit.txt  CurrencyUnit.txt  Custom.txt  Domain.txt  LetterSoundVN.txt  PrefixUnit.txt  Symbol.txt  Teencode.txt
src/pyvinorm/utils/: downloader.py  string_utils.py
tests/patterns/: test_address.py  test_datetime.py  test_math.py  test_mixed_patterns.py  test_special.py
tests/utils/: test_string_utils.py
tools/: sort_resources.py
